--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
         "email": "zishang520@gmail.com"
     }],
     "require": {
-        "laravel/framework": "^9.0",
+        "php": "^8.0.2",
+        "illuminate/filesystem": "^9.0",
+        "illuminate/support": "^9.0",
+        "league/flysystem": "^3.0.0",
         "aliyuncs/oss-sdk-php": "~2.0",
         "nesbot/carbon": "^2.1"
     },
