--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "illuminate/support": "^10.0",
         "league/flysystem": "^3.8.0",
         "aliyuncs/oss-sdk-php": "~2.0",
-        "nesbot/carbon": "^2.62.1",
+        "nesbot/carbon": "^2.62.1"
     },
     "autoload": {
         "psr-4": {
