--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     }],
     "require": {
         "php": "^8.1",
+        "guzzlehttp/guzzle": "^7.4.3",
         "illuminate/filesystem": "^10.0",
         "illuminate/support": "^10.0",
         "league/flysystem": "^3.8.0",
