--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.4.3",
-        "illuminate/filesystem": "^10.0",
-        "illuminate/support": "^10.0",
+        "illuminate/filesystem": "^9.33|^10",
+        "illuminate/support": "^9.33|^10",
         "league/flysystem": "^3.8.0",
         "aliyuncs/oss-sdk-php": "~2.0",
         "nesbot/carbon": "^2.62.1"
