--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,29 @@
 {
     "name": "luoyy/ali-oss-storage",
     "description": "aliyun oss filesystem storage for laravel 9+",
-    "keywords": ["aliyun", "oss", "laravel", "filesystems", "storage"],
+    "keywords": [
+        "aliyun",
+        "oss",
+        "laravel",
+        "filesystems",
+        "storage"
+    ],
     "homepage": "https://github.com/zishang520/Aliyun-oss-storage",
     "license": "MIT",
-    "authors": [{
-        "name": "luoyy",
-        "email": "zishang520@gmail.com"
-    }],
+    "authors": [
+        {
+            "name": "luoyy",
+            "email": "zishang520@gmail.com"
+        }
+    ],
     "require": {
-        "php": "^8.1",
-        "guzzlehttp/guzzle": "^7.4.3",
-        "illuminate/filesystem": "^9.33|^10",
-        "illuminate/support": "^9.33|^10",
+        "php": "^8.2",
+        "guzzlehttp/guzzle": "^7.8.2",
+        "illuminate/filesystem": "^10|^11",
+        "illuminate/support": "^10|^11",
         "league/flysystem": "^3.8.0",
-        "aliyuncs/oss-sdk-php": "~2.0",
-        "nesbot/carbon": "^2.62.1"
+        "aliyuncs/oss-sdk-php": "^2.0",
+        "nesbot/carbon": "^3.8.4"
     },
     "autoload": {
         "psr-4": {
