--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
     "require": {
         "php": "^8.2",
         "guzzlehttp/guzzle": "^7.8.2",
-        "illuminate/filesystem": "^10|^11",
-        "illuminate/support": "^10|^11",
+        "illuminate/filesystem": "^10|^11|^12",
+        "illuminate/support": "^10|^11|^12",
         "league/flysystem": "^3.8.0",
         "aliyuncs/oss-sdk-php": "^2.0",
         "nesbot/carbon": "^3.8.4"
